--- a/java/pom.xml
+++ b/java/pom.xml
@@ -16,10 +16,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+        <dependency>
             <groupId>io.milvus</groupId>
             <artifactId>milvus-sdk-java</artifactId>
-            <version>2.5.0</version>
+            <version>2.5.2</version>
         </dependency>
     </dependencies>
-
 </project>
